--- a/good/Makefile
+++ b/good/Makefile
@@ -1,6 +1,7 @@
 SRC = big_sorts.c check_args_and_stack.c ft_split_ps.c init_stack.c \
 		move_number.c push_swap.c push.c reverse_rotate.c rotate.c \
-		second_sort.c sort_b_to_a.c sort.c swap.c utils_sort.c utils.c \
+		second_sort.c sort_b_to_a.c sort.c sort4_and_sort5.c swap.c \
+		utils_sort.c utils.c \
 
 
 OBJS = ${SRC:.c=.o}
